# DocAligner

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_cn.md  README_en.md  README_tw.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_en.md  feature_request.md  feature_request_en.md
.github/workflows/: .pylintrc  pull_request.yml  release.yml
api/: __init__.py  doc_aligned.py  doc_aligner.py  document.py
api/heatmap_rec/: infer.py
api/point_rec/: infer.py
benchmark/: benchmark_idcard.py  benchmark_passport.py  benchmark_smartdoc.py
data/: README.md  build_dataset.py  download_midv.py  process_docpool.py  process_rename_docpool.py
demo/: README.md  README_cn.md  demo_ipcam.py
docaligner/: __init__.py  aligner.py
docaligner/heatmap_rec/: infer.py
docaligner/heatmap_reg/: infer.py
docaligner/point_rec/: infer.py
docaligner/point_reg/: infer.py
docker/: Dockerfile  README.md  benchmark.bash  build.bash  to_onnx.bash  train.bash
docs/: README.md
model/: README.md  README_cn.md  __init__.py  dataset.py  requirement.txt  to_onnx.py  trainer.py
model/config/: LC100_BIFPN64_D3_PointReg_r256.yaml  fastvit_sa24_h_e_bifpn_256.yaml  fastvit_t8_h_e_bifpn_256.yaml  lcnet050_h_e_bifpn_256.yaml  lcnet050_h_e_bifpn_256_thickness.yaml  lcnet050_h_e_fpn_256.yaml  lcnet050_h_e_fpn_256_thickness.yaml  lcnet050_p_multi_decoder_l3_d64_256.yaml  lcnet050_p_multi_decoder_l3_d64_512.yaml  lcnet050_point_box_edge_bifpn_two_decoder.yaml  lcnet050_point_box_edge_bifpn_two_decoder_aux_heavy_head.yaml  lcnet050_point_box_edge_bifpn_two_encoder_aux.yaml  lcnet050_point_reg_bifpn_vit_d64l12p8_dino.yaml  lcnet050_point_reg_bifpn_vit_d64l24p8_dino.yaml  lcnet050_point_reg_vit_d64l24p8_dino.yaml  lcnet100_h_e_bifpn_256.yaml  lcnet100_h_e_fpn_256.yaml  lcnet100_heatmap_edge_bifpn_256.yaml  lcnet100_point_reg.yaml  lcnet100_point_reg_bifpn.yaml  lcnet100_point_reg_bifpn_edge_awing.yaml  lcnet100_point_reg_bifpn_mse.yaml  lcnet100_point_reg_bifpn_vit_d64l24p8_dino.yaml  lcnet100_point_reg_bn.yaml  lcnet100_point_reg_feat_merge.yaml  lcnet_100_fuse_all_edge.yaml  mobilenetv2_140_h_e_bifpn_256.yaml  (+5 more)
reference/: README.md
tests/: test_aligner.py
(+17 files in other folders)
