[metadata]
name = docaligner
version = attr: docaligner.__version__
description = Predictions of the four corners of documents in the image.
long_description = file: README.md
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.8,<=3.10
url = https://github.com/DocsaidLab/DocAligner.git

[options]
packages = find:
include_package_data = True
setup_requires=
    pip
    setuptools
    wheel
    docsaidkit>=0.16.0

[options.packages.find]
exclude =
    data
    docker
    demo
    docs
    model
    model.*
    tests
    benchmark
    reference
